fix(products): productListでまとめる、gap使わない

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -22,7 +22,7 @@ a {
 
 .container {
   max-width: 1000px;
-  padding: 20px 8px;
+  padding: 20px 16px;
   margin: 60px auto;
 }
 
